<resources>
    <string name="app_name">CapstoneProject</string>

    //LoginActivity
    <string name="login">Login</string>
    <string name="opening">Enter your registered email to log in</string>
    <string name="email">Email</string>
    <string name="example">Example: johndoe@example.com</string>
    <string name="password">Password</string>
    <string name="login_google">Login with Google</string>

    //RegisterActivity
    <string name="register">Register</string>
    <string name="opening_register">Complete your own data below!</string>
    <string name="full_name">Full Name</string>
    <string name="example_register">Example: Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="or">Or</string>
    <string name="register_google">Register with Google</string>
    <string name="register_account">Let\'s Register</string>

    <string name="terms_of_service">By login or register, you agree to the Terms of Service and Privacy Policy.</string>
    <string name="welcome">Welcome to G-Parking!</string>
    <string name="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="search">Search</string>
    <string name="nearby">Nearby</string>
    <string name="x">X</string>
    <string name="hold_on">Hold on.</string>
    <string name="verification">We\'re sending your verification link. Please check your email...</string>
    <string name="splashscreen">SplashScreen</string>
    <string name="mall_parkir">Parkiran Mall</string>
    <string name="rating_star">4.9/5.0</string>
    <string name="distance">3.69 km</string>
    <string name="parking_detail">Parking Detail</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_title">Description</string>
    <string name="description_fragment">Basement Parking and 40 parking per basement</string>
    <string name="pricing">Pricing</string>
    <string name="detail_pricing_car">The First 2 hours - IDR. 5000 <br><br>Next Hours- IDR. 1000/hrs.</br></br></string>
    <string name="book">Book</string>
    <string name="description_motorcycle">Groundfloor motor parking with max. capacity 340.</string>
    <string name="detail_pricing_motor">The First 2 hours - IDR. 2000 <br><br>Next Hours- IDR. 1000/hrs.</br></br></string>
    <string name="tab_car">Car</string>
    <string name="tab_motorcycle">Motorcycle</string>
    <string name="title_detail">Set Your License Plate Vehicle</string>
    <string name="plate_number">Plate Number</string>
    <string name="time">Set Your Arrival Time</string>
    <string name="parking_position">Set Your Parking Position</string>
    <string name="basement_01">Basement 01</string>
    <string name="available">3 Available</string>
    <string name="basement_02">Basement 02</string>
    <string name="full">Full</string>
    <string name="available_2">25 Available</string>
    <string name="add_promo_code"><u>Add promo code</u></string>

    <string name="qr_code">QR Code</string>
    <string name="schedule">Schedule</string>
    <string name="schedule_date">Schedule Date</string>
    <string name="plate">Plate</string>
    <string name="random_string">Random String</string>
    <string name="parking_place">Parking Place</string>
    <string name="checkin_time">Checkin Time</string>
    <string name="booked_on">Booked On</string>
    <string name="license_plate">License Plate</string>
    <string name="next">Next</string>
    <string name="total">Total</string>
    <string name="balance_1">Balance 1</string>
    <string name="detail">Detail</string>
    <string name="detail_in">Detail In</string>
    <string name="detail_out">Detail Out</string>

    <string name="check_plate_number">Check Plate Number</string>
    <string name="payment_method">Payment Method</string>
    <string name="balance">Balance</string>
    <string name="ovo">Ovo</string>
    <string name="balance_2">Balance 2</string>
    <string name="gopay">Gopay</string>
    <string name="balance_3">Balance 3</string>
    <string name="dana">Dana</string>
    <string name="balance_4">Balance 4</string>
    <string name="pay_now">Pay Now</string>

    <string name="tab_activity">Activity</string>
    <string name="tab_history">History</string>

    //AccountFragment
    <string name="account_settings">Settings</string>
    <string name="account_howtouse">How to use</string>
    <string name="account_languageoption">Language Option</string>
    <string name="account_termsofservice">Terms of Service</string>
    <string name="account_privacypolicy">Privacy Policy</string>
    <string name="account_referralcode">Referral Code</string>
    <string name="account_account">Account</string>
    <string name="account_faq">FAQ</string>
    <string name="account_syncmyewallet">Sync My-E-Wallet</string>
    <string name="account_helpchat">Help/Chat</string>
    <string name="account_signout">Sign Out</string>

    //LanguageActivity
    <string name="language_changelanguage">Change Language</string>

    //BottomNavigation
    <string name="main_home">Home</string>
    <string name="main_activity">Activity</string>
    <string name="main_feed">Feed</string>
    <string name="main_account">Account</string>

    //SearchLocationActivity
    <string name="showbottomsheet">Show bottom sheet</string>

    //SettingHowToUseActivity
    <string name="title_search">Find parking location</string>
    <string name="description_search">
        1. Use the search menu.
        2. A list of malls that provide parking will appear. In addition, you can search for parking spaces based on nearby locations by clicking the blue button next to the search menu.
        3. Select a parking location.
    </string>

    <string name="title_payment">Make a Payment</string>
    <string name="description_payment">
        1. Use the barcode obtained after filling in the booking data then scan it.
        2. Select the payment method you want.
        3. Click pay now.
    </string>


    //SettingTermsServiceActivity
    <string name="title_terms">TERMS FOR USING THE APPLICATION</string>
    <string name="description_terms">
        You represent and warrant that you are an individual legally entitled to enter into a
        binding agreement under the laws of the Republic of Indonesia, in particular the Terms of
        Use, to use the Application and that you are at least 21 years old or have ever been married
        and not under guardianship. Otherwise, we or the relevant Service Provider, will be entitled
        by law to cancel any agreement entered into with you. You further represent and warrant that
        you have the right, authority and capacity to use the Service and to abide by the Terms of
        Use. You can only use the Application once you have signed up with it. Upon successfully
        signing up, the Application will provide you with a personal account that can be accessed
        with a password you choose.
    </string>

    <string name="title_terms_payment">PAYMENT</string>
    <string name="description_terms_payment">
        The download and/or use of the Application is free of charge. We may introduce fees for the
        download and/or use of the Application at times. We will inform you accordingly about this
        for you to decide whether you wish to continue using the Application or not. However, the
        Internet connection required to use the Service, and any associated charges (e.g. mobile
        data expenses) incurred by your use of the Service are your exclusive responsibility and
        made solely at your expense.
    </string>

    <string name="title_right">INTELLECTUAL PROPERTY MATTERS</string>
    <string name="description_right">
        G-Parking, including its name and logo, the Application and the Service, is protected by
        copyright, trademark and other rights provided under the laws of the Republic of Indonesia.
        We (and our licensors, if applicable) exclusively own all rights, title and interest in and
        to the Application, including all associated intellectual property rights.
    </string>

    <string name="label_license_plate_number">Set Your License Plate Vehicle</string>
    <string name="label_arrival_time">Set Your Arrival Time</string>
    <string name="label_time_separator" translatable="false">:</string>
    <string name="label_arrival_date">Set Your Arrival Date</string>
    <string name="label_parking_position">Set Your Parking Position</string>
    <string name="action_next">Next</string>
    <string name="hint_booking_date">dd/mm/yyyy, Day</string>
    <string name="hint_license_plate">ex. B1234ASD</string>
    <string name="error_license_plate">Your license doesn\'t match pattern</string>
    <string name="hint_00" translatable="false">00</string>
    <string name="label_am_pm" translatable="false">AM</string>
    <string name="label_select_date">Please set your date</string>
    <string name="label_select_time">Please set your time</string>
    <string name="action_ticket">Ticket</string>
    <string name="label_ticket_id" translatable="false">AB0123456789</string>
    <string name="label_check_in_time">Checkin Time</string>
    <string name="label_booked_on">Booked On</string>
    <string name="label_license_plate">License Plate</string>
    <string name="action_end_book">End Book</string>
    <string name="label_detail" translatable="false">Detail</string>
    <string name="you_cant_order_in_past">You can\'t order in the past</string>
    <string name="failed_to_booking">Failed to booking</string>
    <string name="cancel">Cancel</string>
    <string name="failed_to_end_book">Failed to end book</string>
    <string name="failed_to_cancel_book">Failed to cancel Book</string>

</resources>