<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.detail.cardetail.CarFragment">

    <TextView
        android:id="@+id/title_description_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description_title"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/description_txt_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/description_fragment"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/pricing_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/pricing"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/detail_pricing_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/detail_pricing_car"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btn_book_car"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:layout_marginTop="100dp"
        android:background="@drawable/custom_button1"
        android:text="@string/book"
        android:textAllCaps="false"
        android:textColor="@color/white" />

</LinearLayout>